# agentes

./: .vercelignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  types.d.ts  vercel.json
api/: advanced_math_tools.py  index.py  mcp_client.py  mcp_config.py  mcp_server.py  rag_processor.py  tools.py
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/chat/[id]/: route.ts
app/api/orchestrator/: route.ts
app/api/seo_writer/: route.ts
app/api/upload/: route.ts
app/api/upload_image/: route.ts
app/auth/callback/: route.ts
app/chat/[id]/: page.tsx
app/login/: page.tsx
app/seo-writer/: page.tsx
components/: AgentItem.tsx  AuthForm.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  MessageList.tsx  Sidebar.tsx  StreamingMessage.tsx  ToolConfigModal.tsx  ToolsMenu.tsx  TypingAnimation.tsx
components/ui/: calendar.tsx  use-toast.ts
contexts/: AuthContext.tsx  ChatContext.tsx
lib/: chat.ts  database.types.ts
lib/graphs/: agent.ts  orchestrator.ts
lib/llm/: llm_service.ts
lib/tool-manager/: index.ts
lib/tool-manager/tools/: browser.ts  fileSystem.ts  searchDocuments.ts  searchImages.ts  shell.ts  webSearch.ts
python_api/: app.py  requirements.txt
scripts/: cache-agents.mjs
supabase/.temp/: pooler-url  project-ref
supabase/functions/embed/: index.ts
utils/supabase/: client.ts  server.ts
