[tool.poetry]
name = "agentes-nuevo"
version = "0.1.0"
description = "Plataforma de agentes de IA"
authors = ["luis <luisrojasviteri8@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <4.0"

# --- Framework y Utilidades ---
Flask = "^3.0.3"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
supabase = "^2.5.0"
pydantic = "<3"
tiktoken = "^0.7.0"
flask-cors = "^4.0.1"
requests = "^2.32.4"
pymupdf = "^1.26.1"

# --- Stack LangChain Corregido ---
langchain = ">=0.3,<0.4"
langchain-community = ">=0.3,<0.4"
langchain-openai = ">=0.2,<0.3"
langchain-google-genai = ">=2,<3"
langgraph = ">=0.2.20,<0.3"

# --- CORREGIDO: Dependencias de Base de Datos ---
# Usar psycopg2-binary en lugar de psycopg
psycopg2-binary = "^2.9.9"

# --- CORREGIDO: Checkpointer específico ---
# Usar el paquete correcto para SQLite
langgraph-checkpoint = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"